# py-eip712-structs

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: jobs.yml
eip712_structs/: __init__.py  domain_separator.py  struct.py  types.py
tests/: test_chain_parity.py  test_domain_separator.py  test_encode_data.py  test_encode_type.py  test_message_json.py  test_types.py
tests/contracts/: hash_test_contract.sol
