[project]
name = "eip712-structs"
version = "1.2.0"
authors = [
    { name = "AJ Grubbs" },
    { name = "Mihai Cosma", email = "mcosma@gmail.com" }
]
requires-python = ">= 3.10"
dependencies = ["eth-utils"]
description = "A python library for EIP712 objects"
keywords = ["ethereum", "eip712", "solidity"]
license = {text = "MIT License"}

[project.urls]
Homepage = "https://github.com/wakamex/py-eip712-structs"
Repository = "https://github.com/wakamex/py-eip712-structs.git"

[project.optional-dependencies]
test = [
    "pytest",
    "web3",
]
dev = [
    "ruff",
]
all = [
    "eip712-structs[test, dev]",
]

[tool.pylint.format]
max-line-length = "120"

[tool.ruff]
# Assume Python 3.12
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Default is: pycodestyle (E) and Pyflakes (F)
# We add flake8-builtins (A), pydocstyle (D), isort (I), pep8-naming (N), and pylint (PL).
# We remove pycodestyle (E) since it throws erroneous line too long errors.
# We remove Pyflakes (F) since it complains about `import *` which we need.
select = ["A", "D", "I", "N", "PL"]

# We ignore the following rules:
# D100: Missing docstring in public module
# D103: Missing docstring in public function
# D203: 1 blank line required before class docstring (incompatible with D211: no blank lines before class docstring)
# D213: multi-line-summary-second-line (incompatible with D212: multi-line summary should start at the first line)
# D406: Section name should end with a newline
# D407: Missing dashed underline after section (not needed for Google docstring format)
# D413: Missing blank line after last section
ignore = ["D100", "D103", "D203", "D213", "D406", "D407", "D413"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "D", "I", "N", "PL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

